--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 
 /*-------hot deal--------*/
 .section-three {
-    margin: 128px 0;
+    margin: 256px 0;
     padding: 0 240px;
 }
 
@@ -152,6 +152,10 @@ body {
 
 
 /*-------Instagram---------*/
+.section-four {
+    padding: 0 240px;
+    margin-top: 128px;
+}
 
 .instagram {
     text-align: center;
@@ -177,4 +181,82 @@ body {
     font-weight: 400;
     line-height: 30px;
     margin-bottom: 32px;
+}
+
+/*-------latest deals--------*/
+.section-five {
+    margin-top: 128px;
+    padding: 0 240px;
+}
+
+input[type=text] {
+    width: 700px;
+    height: 64px;
+    border-radius: 8px;
+    background: #FFF;
+    border: none;
+    margin-right: 16px;
+}
+
+::placeholder {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 16px;
+    font-weight: 400;
+    padding-left: 20px;
+}
+
+.latest-deal {
+    text-align: center;
+    background-image: url("Images/Rectangle\ 9.png");
+    width: 1440px;
+    height: 449px;
+}
+
+.latest-deal-title {
+    padding-top: 122px;
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+}
+
+.latest-deal-description {
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-top: 16px;
+    margin-bottom: 48px;
+}
+
+/*------footer style----*/
+.section-seven {
+    margin-top: 128px;
+}
+
+.footer {
+    text-align: center;
+    background-color: #111010;
+}
+
+.footer-title {
+    font-size: 48px;
+    font-weight: 800;
+    color: #FFFFFF;
+    padding-top: 128px;
+    margin-bottom: 24px;
+}
+
+.footer-description {
+    color: rgba(255, 255, 255, 0.90);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 32px;
+}
+
+.footer-copyright {
+    color: rgba(255, 255, 255, 0.40);
+    font-size: 16px;
+    font-weight: 400;
+    padding-bottom: 128px;
 }
