--- a/style.css
+++ b/style.css
@@ -183,8 +183,62 @@ body {
     margin-bottom: 32px;
 }
 
+/*-------popular products-------*/
+.section-five{
+    margin-top: 128px;
+    padding: 0 240px;
+}
+.popular-image{
+    display: flex;
+    gap: 24px;
+    text-align: center;
+}
+.popular-content{
+    text-align: center;
+}
+.button-secondary{
+    border: 1px solid #E55473;
+    padding: 10px 20px;
+    background: transparent;
+    color: #E55473;
+    cursor: pointer;
+    border-radius: 8px;
+}
+.button-secondary:hover{
+    background-color: #E55473;
+    color: white;
+}
+.popular-title{
+    color: #272727;
+    font-size: 40px;
+    font-weight: 800;
+    margin-bottom: 24px;
+}
+.popular-description{
+    color: rgba(39, 39, 39, 0.60);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 30px;
+    margin-bottom: 32px;
+}
+.popular-caption{
+    margin-top: 10px;
+    color: grey;
+    font-size: 16px;
+    font-weight: 700;
+}
+.popular-pricing{
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color: gray;
+    font-size: 16px;
+    font-weight: 700;
+}
+
+
+
 /*-------latest deals--------*/
-.section-five {
+.section-six {
     margin-top: 128px;
     padding: 0 240px;
 }
@@ -260,3 +314,6 @@ input[type=text] {
     font-weight: 400;
     padding-bottom: 128px;
 }
+
+
+
